--- a/package.json
+++ b/package.json
@@ -24,9 +24,18 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-typescript": "^7.8.3",
     "@babel/runtime": "^7.8.7",
+    "@types/express": "^4.17.3",
+    "@types/helmet": "0.0.45",
+    "@types/mongoose": "^5.7.6",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "@babel/node": "^7.8.7"
+    "@babel/node": "^7.8.7",
+    "argon2": "^0.26.1",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.21.3",
+    "mongoose": "^5.9.5"
   }
 }
