--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     ],
     "plugins": [
         "@babel/plugin-proposal-optional-chaining",
+        "@babel/plugin-proposal-export-namespace-from",
         "@babel/plugin-transform-runtime"
     ]
 }
