--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.3",
     "@types/helmet": "0.0.45",
     "@types/mongoose": "^5.7.6",
+    "@types/validator": "^12.0.1",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
@@ -37,6 +38,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.3",
-    "mongoose": "^5.9.5"
+    "mongoose": "^5.9.5",
+    "validator": "^13.0.0"
   }
 }
