--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "@types/mongoose": "^5.7.6",
     "@types/validator": "^12.0.1",
     "@types/xregexp": "^3.0.30",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
@@ -40,6 +45,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.3",
     "mongoose": "^5.9.5",
+    "typescript": "^3.8.3",
     "validator": "^13.0.0",
     "xregexp": "^4.3.0"
   }
