--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "babel-node . --extensions .ts",
-    "dev": "nodemon --exec babel-node . --extensions .ts"
+    "dev": "nodemon --exec babel-node . --ext ts --extensions .ts"
   },
   "repository": {
     "type": "git",
