Configure testing environment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "jsx": "react"
     },
     "include": [
-        "src"
+        "src",
+        "test"
     ],
     "files": [
         "src/custom.d.ts"
