--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.ts",
   "scripts": {
     "start": "babel-node . --extensions .ts",
-    "dev": "nodemon --exec babel-node . --ext ts --extensions .ts"
+    "dev": "nodemon --exec babel-node . --ext ts --extensions .ts",
+    "test": "TEST_RUN=1 mocha"
   },
   "repository": {
     "type": "git",
@@ -24,10 +25,12 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-typescript": "^7.8.3",
+    "@babel/register": "^7.9.0",
     "@babel/runtime": "^7.8.7",
     "@types/express": "^4.17.3",
     "@types/helmet": "0.0.45",
     "@types/mongoose": "^5.7.6",
+    "@types/supertest": "^2.0.8",
     "@types/validator": "^12.0.1",
     "@types/xregexp": "^3.0.30",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
@@ -35,10 +38,14 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
-    "nodemon": "^2.0.2"
+    "mocha": "^7.1.1",
+    "mongodb-memory-server": "^6.4.1",
+    "nodemon": "^2.0.2",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "@babel/node": "^7.8.7",
+    "@types/mocha": "^7.0.2",
     "argon2": "^0.26.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
