--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "@babel/node": "^7.8.7",
     "@types/mocha": "^7.0.2",
+    "@hapi/joi": "^17.1.1",
     "argon2": "^0.26.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
