--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/register": "^7.9.0",
     "@babel/runtime": "^7.8.7",
     "@types/express": "^4.17.3",
+    "@types/hapi__joi": "^16.0.12",
     "@types/helmet": "0.0.45",
     "@types/mongoose": "^5.7.6",
     "@types/supertest": "^2.0.8",
